chore: update lumen-core module
- Add maven-compiler-plugin with APT annotation processing
- Enhance Lumen builder with additional configuration options
- Update EntityMetaProcessor with better error handling
- Improve SqlTemplateProcessor for template validation
- Update DaoSupport with enhanced CRUD operations